crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__arg.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": {
        "default": "alpine:3.20",
        "name": "BASE_IMAGE"
      },
      "args": "BASE_IMAGE=alpine:3.20",
      "args_span": {
        "end_byte": 26,
        "end_column": 27,
        "end_line": 1,
        "start_byte": 4,
        "start_column": 5,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 26,
          "end_column": 27,
          "end_line": 1,
          "start_byte": 4,
          "start_column": 5,
          "start_line": 1
        },
        "text": "BASE_IMAGE=alpine:3.20"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ARG",
      "keyword_span": {
        "end_byte": 3,
        "end_column": 4,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "label": null,
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 26,
        "end_column": 27,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "${BASE_IMAGE}",
      "args_span": {
        "end_byte": 45,
        "end_column": 19,
        "end_line": 2,
        "start_byte": 32,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 45,
          "end_column": 19,
          "end_line": 2,
          "start_byte": 32,
          "start_column": 6,
          "start_line": 2
        },
        "text": "${BASE_IMAGE}"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "${BASE_IMAGE}",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 31,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 27,
        "start_column": 1,
        "start_line": 2
      },
      "label": null,
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 45,
        "end_column": 19,
        "end_line": 2,
        "start_byte": 27,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": {
        "default": null,
        "name": "TARGETARCH"
      },
      "args": "TARGETARCH",
      "args_span": {
        "end_byte": 60,
        "end_column": 15,
        "end_line": 3,
        "start_byte": 50,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 60,
          "end_column": 15,
          "end_line": 3,
          "start_byte": 50,
          "start_column": 5,
          "start_line": 3
        },
        "text": "TARGETARCH"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ARG",
      "keyword_span": {
        "end_byte": 49,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 46,
        "start_column": 1,
        "start_line": 3
      },
      "label": null,
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 60,
        "end_column": 15,
        "end_line": 3,
        "start_byte": 46,
        "start_column": 1,
        "start_line": 3
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": {
        "default": "1.2.3",
        "name": "APP_VERSION"
      },
      "args": "APP_VERSION=1.2.3",
      "args_span": {
        "end_byte": 82,
        "end_column": 22,
        "end_line": 4,
        "start_byte": 65,
        "start_column": 5,
        "start_line": 4
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 82,
          "end_column": 22,
          "end_line": 4,
          "start_byte": 65,
          "start_column": 5,
          "start_line": 4
        },
        "text": "APP_VERSION=1.2.3"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ARG",
      "keyword_span": {
        "end_byte": 64,
        "end_column": 4,
        "end_line": 4,
        "start_byte": 61,
        "start_column": 1,
        "start_line": 4
      },
      "label": null,
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 82,
        "end_column": 22,
        "end_line": 4,
        "start_byte": 61,
        "start_column": 1,
        "start_line": 4
      },
      "recovery": null,
      "run": null
    }
  ],
  "syntax": null
}
