crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__buildkit_basics.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [
    {
      "line": 1,
      "span": {
        "end_byte": 30,
        "end_column": 31,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "text": "# syntax=docker/dockerfile:1.7"
    }
  ],
  "escape": null,
  "has_buildkit_features": true,
  "instructions": [
    {
      "args": "--platform=$BUILDPLATFORM alpine:3.20 AS base",
      "args_span": {
        "end_byte": 81,
        "end_column": 51,
        "end_line": 2,
        "start_byte": 36,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "flags": [
        [
          "platform",
          "$BUILDPLATFORM"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 81,
          "end_column": 51,
          "end_line": 2,
          "start_byte": 36,
          "start_column": 6,
          "start_line": 2
        },
        "text": "--platform=$BUILDPLATFORM alpine:3.20 AS base"
      },
      "from": {
        "alias": "base",
        "digest": null,
        "flags": [
          [
            "platform",
            "$BUILDPLATFORM"
          ]
        ],
        "image": "alpine:3.20",
        "platform": "$BUILDPLATFORM"
      },
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 35,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 81,
        "end_column": 51,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "run": null
    },
    {
      "args": "--mount=type=cache,target=/var/cache/apk apk add curl",
      "args_span": {
        "end_byte": 139,
        "end_column": 58,
        "end_line": 3,
        "start_byte": 86,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [],
      "flags": [
        [
          "mount",
          "type=cache,target=/var/cache/apk"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 139,
          "end_column": 58,
          "end_line": 3,
          "start_byte": 86,
          "start_column": 5,
          "start_line": 3
        },
        "text": "--mount=type=cache,target=/var/cache/apk apk add curl"
      },
      "from": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 85,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 82,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [
        {
          "options": [
            [
              "type",
              "cache"
            ],
            [
              "target",
              "/var/cache/apk"
            ]
          ],
          "type": "cache"
        }
      ],
      "raw_span": {
        "end_byte": 139,
        "end_column": 58,
        "end_line": 3,
        "start_byte": 82,
        "start_column": 1,
        "start_line": 3
      },
      "run": {
        "flags": [
          [
            "mount",
            "type=cache,target=/var/cache/apk"
          ]
        ],
        "mounts": [
          {
            "options": [
              [
                "type",
                "cache"
              ],
              [
                "target",
                "/var/cache/apk"
              ]
            ],
            "type": "cache"
          }
        ],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 139,
            "end_column": 58,
            "end_line": 3,
            "start_byte": 127,
            "start_column": 46,
            "start_line": 3
          },
          "text": "apk add curl"
        }
      }
    },
    {
      "args": "<<EOF\necho hello\nEOF",
      "args_span": {
        "end_byte": 164,
        "end_column": 4,
        "end_line": 6,
        "start_byte": 144,
        "start_column": 5,
        "start_line": 4
      },
      "continuations": [],
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 164,
          "end_column": 4,
          "end_line": 6,
          "start_byte": 144,
          "start_column": 5,
          "start_line": 4
        },
        "text": "<<EOF\necho hello\nEOF"
      },
      "from": null,
      "heredocs": [
        {
          "body": "echo hello\n",
          "body_span": {
            "end_byte": 161,
            "end_column": 1,
            "end_line": 6,
            "start_byte": 150,
            "start_column": 1,
            "start_line": 5
          },
          "delimiter": "EOF",
          "quoted": false,
          "target_instruction": "RUN"
        }
      ],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 143,
        "end_column": 4,
        "end_line": 4,
        "start_byte": 140,
        "start_column": 1,
        "start_line": 4
      },
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 164,
        "end_column": 4,
        "end_line": 6,
        "start_byte": 140,
        "start_column": 1,
        "start_line": 4
      },
      "run": {
        "flags": [],
        "mounts": [],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 164,
            "end_column": 4,
            "end_line": 6,
            "start_byte": 144,
            "start_column": 5,
            "start_line": 4
          },
          "text": "<<EOF\necho hello\nEOF"
        }
      }
    },
    {
      "args": "--from=base /src /dst",
      "args_span": {
        "end_byte": 191,
        "end_column": 27,
        "end_line": 7,
        "start_byte": 170,
        "start_column": 6,
        "start_line": 7
      },
      "continuations": [],
      "flags": [
        [
          "from",
          "base"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 191,
          "end_column": 27,
          "end_line": 7,
          "start_byte": 170,
          "start_column": 6,
          "start_line": 7
        },
        "text": "--from=base /src /dst"
      },
      "from": null,
      "heredocs": [],
      "keyword": "COPY",
      "keyword_span": {
        "end_byte": 169,
        "end_column": 5,
        "end_line": 7,
        "start_byte": 165,
        "start_column": 1,
        "start_line": 7
      },
      "line": 7,
      "mounts": [],
      "raw_span": {
        "end_byte": 191,
        "end_column": 27,
        "end_line": 7,
        "start_byte": 165,
        "start_column": 1,
        "start_line": 7
      },
      "run": null
    }
  ],
  "syntax": {
    "image": "docker/dockerfile:1.7",
    "line": 1
  }
}
