crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__comments.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [
    {
      "line": 1,
      "span": {
        "end_byte": 49,
        "end_column": 50,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "text": "# regular comments should not become instructions"
    },
    {
      "line": 4,
      "span": {
        "end_byte": 85,
        "end_column": 18,
        "end_line": 4,
        "start_byte": 68,
        "start_column": 1,
        "start_line": 4
      },
      "text": "# another comment"
    }
  ],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 66,
        "end_column": 17,
        "end_line": 2,
        "start_byte": 55,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 66,
          "end_column": 17,
          "end_line": 2,
          "start_byte": 55,
          "start_column": 6,
          "start_line": 2
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 54,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 50,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 66,
        "end_column": 17,
        "end_line": 2,
        "start_byte": 50,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "echo hello",
      "args_span": {
        "end_byte": 100,
        "end_column": 15,
        "end_line": 5,
        "start_byte": 90,
        "start_column": 5,
        "start_line": 5
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 100,
          "end_column": 15,
          "end_line": 5,
          "start_byte": 90,
          "start_column": 5,
          "start_line": 5
        },
        "text": "echo hello"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 89,
        "end_column": 4,
        "end_line": 5,
        "start_byte": 86,
        "start_column": 1,
        "start_line": 5
      },
      "line": 5,
      "mounts": [],
      "raw_span": {
        "end_byte": 100,
        "end_column": 15,
        "end_line": 5,
        "start_byte": 86,
        "start_column": 1,
        "start_line": 5
      },
      "recovery": null,
      "run": {
        "flags": [],
        "mounts": [],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 100,
            "end_column": 15,
            "end_line": 5,
            "start_byte": 90,
            "start_column": 5,
            "start_line": 5
          },
          "text": "echo hello"
        }
      }
    }
  ],
  "syntax": null
}
