crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__continuations.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "label": null,
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "apk add \\\n    curl \\\n    git",
      "args_span": {
        "end_byte": 49,
        "end_column": 8,
        "end_line": 4,
        "start_byte": 21,
        "start_column": 5,
        "start_line": 2
      },
      "continuations": [
        {
          "escape": "\\",
          "line": 2,
          "span": {
            "end_byte": 30,
            "end_column": 14,
            "end_line": 2,
            "start_byte": 29,
            "start_column": 13,
            "start_line": 2
          }
        },
        {
          "escape": "\\",
          "line": 3,
          "span": {
            "end_byte": 41,
            "end_column": 11,
            "end_line": 3,
            "start_byte": 40,
            "start_column": 10,
            "start_line": 3
          }
        }
      ],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 49,
          "end_column": 8,
          "end_line": 4,
          "start_byte": 21,
          "start_column": 5,
          "start_line": 2
        },
        "text": "apk add \\\n    curl \\\n    git"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 20,
        "end_column": 4,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "label": null,
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 49,
        "end_column": 8,
        "end_line": 4,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": {
        "flags": [],
        "mounts": [],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 49,
            "end_column": 8,
            "end_line": 4,
            "start_byte": 21,
            "start_column": 5,
            "start_line": 2
          },
          "text": "apk add \\\n    curl \\\n    git"
        }
      }
    }
  ],
  "syntax": null
}
