crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__copy_from.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20 AS build",
      "args_span": {
        "end_byte": 25,
        "end_column": 26,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 25,
          "end_column": 26,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20 AS build"
      },
      "from": {
        "alias": "build",
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "label": null,
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 25,
        "end_column": 26,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "scratch",
      "args_span": {
        "end_byte": 38,
        "end_column": 13,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 38,
          "end_column": 13,
          "end_line": 2,
          "start_byte": 31,
          "start_column": 6,
          "start_line": 2
        },
        "text": "scratch"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "scratch",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 30,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 26,
        "start_column": 1,
        "start_line": 2
      },
      "label": null,
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 38,
        "end_column": 13,
        "end_line": 2,
        "start_byte": 26,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "--from=build /out/app /app",
      "args_span": {
        "end_byte": 70,
        "end_column": 32,
        "end_line": 3,
        "start_byte": 44,
        "start_column": 6,
        "start_line": 3
      },
      "continuations": [],
      "copy": {
        "chmod": null,
        "chown": null,
        "destination": "/app",
        "flags": [
          [
            "from",
            "build"
          ]
        ],
        "from": "build",
        "kind": "copy",
        "sources": [
          "/out/app"
        ]
      },
      "env": null,
      "expose": null,
      "flags": [
        [
          "from",
          "build"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 70,
          "end_column": 32,
          "end_line": 3,
          "start_byte": 44,
          "start_column": 6,
          "start_line": 3
        },
        "text": "--from=build /out/app /app"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "COPY",
      "keyword_span": {
        "end_byte": 43,
        "end_column": 5,
        "end_line": 3,
        "start_byte": 39,
        "start_column": 1,
        "start_line": 3
      },
      "label": null,
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 70,
        "end_column": 32,
        "end_line": 3,
        "start_byte": 39,
        "start_column": 1,
        "start_line": 3
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "--chown=1000:1000 --chmod=0755 bin/rudolint /usr/local/bin/rudolint",
      "args_span": {
        "end_byte": 143,
        "end_column": 73,
        "end_line": 4,
        "start_byte": 76,
        "start_column": 6,
        "start_line": 4
      },
      "continuations": [],
      "copy": {
        "chmod": "0755",
        "chown": "1000:1000",
        "destination": "/usr/local/bin/rudolint",
        "flags": [
          [
            "chown",
            "1000:1000"
          ],
          [
            "chmod",
            "0755"
          ]
        ],
        "from": null,
        "kind": "copy",
        "sources": [
          "bin/rudolint"
        ]
      },
      "env": null,
      "expose": null,
      "flags": [
        [
          "chown",
          "1000:1000"
        ],
        [
          "chmod",
          "0755"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 143,
          "end_column": 73,
          "end_line": 4,
          "start_byte": 76,
          "start_column": 6,
          "start_line": 4
        },
        "text": "--chown=1000:1000 --chmod=0755 bin/rudolint /usr/local/bin/rudolint"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "COPY",
      "keyword_span": {
        "end_byte": 75,
        "end_column": 5,
        "end_line": 4,
        "start_byte": 71,
        "start_column": 1,
        "start_line": 4
      },
      "label": null,
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 143,
        "end_column": 73,
        "end_line": 4,
        "start_byte": 71,
        "start_column": 1,
        "start_line": 4
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "https://example.com/archive.tar.gz /tmp/archive.tar.gz",
      "args_span": {
        "end_byte": 202,
        "end_column": 59,
        "end_line": 5,
        "start_byte": 148,
        "start_column": 5,
        "start_line": 5
      },
      "continuations": [],
      "copy": {
        "chmod": null,
        "chown": null,
        "destination": "/tmp/archive.tar.gz",
        "flags": [],
        "from": null,
        "kind": "add",
        "sources": [
          "https://example.com/archive.tar.gz"
        ]
      },
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 202,
          "end_column": 59,
          "end_line": 5,
          "start_byte": 148,
          "start_column": 5,
          "start_line": 5
        },
        "text": "https://example.com/archive.tar.gz /tmp/archive.tar.gz"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ADD",
      "keyword_span": {
        "end_byte": 147,
        "end_column": 4,
        "end_line": 5,
        "start_byte": 144,
        "start_column": 1,
        "start_line": 5
      },
      "label": null,
      "line": 5,
      "mounts": [],
      "raw_span": {
        "end_byte": 202,
        "end_column": 59,
        "end_line": 5,
        "start_byte": 144,
        "start_column": 1,
        "start_line": 5
      },
      "recovery": null,
      "run": null
    }
  ],
  "syntax": null
}
