crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__directives.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [
    {
      "line": 3,
      "value": "skip=JSONArgsRecommended"
    }
  ],
  "comments": [
    {
      "line": 1,
      "span": {
        "end_byte": 30,
        "end_column": 31,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "text": "# syntax=docker/dockerfile:1.7"
    },
    {
      "line": 2,
      "span": {
        "end_byte": 41,
        "end_column": 11,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "text": "# escape=`"
    },
    {
      "line": 3,
      "span": {
        "end_byte": 74,
        "end_column": 33,
        "end_line": 3,
        "start_byte": 42,
        "start_column": 1,
        "start_line": 3
      },
      "text": "# check=skip=JSONArgsRecommended"
    }
  ],
  "escape": {
    "character": "`",
    "line": 2
  },
  "has_buildkit_features": false,
  "instructions": [
    {
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 91,
        "end_column": 17,
        "end_line": 4,
        "start_byte": 80,
        "start_column": 6,
        "start_line": 4
      },
      "continuations": [],
      "flags": [],
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 79,
        "end_column": 5,
        "end_line": 4,
        "start_byte": 75,
        "start_column": 1,
        "start_line": 4
      },
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 91,
        "end_column": 17,
        "end_line": 4,
        "start_byte": 75,
        "start_column": 1,
        "start_line": 4
      }
    }
  ],
  "syntax": {
    "image": "docker/dockerfile:1.7",
    "line": 1
  }
}
