crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__env.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "run": null
    },
    {
      "arg": null,
      "args": "APP_HOME=/app APP_ENV=production",
      "args_span": {
        "end_byte": 53,
        "end_column": 37,
        "end_line": 2,
        "start_byte": 21,
        "start_column": 5,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": {
        "assignments": [
          {
            "name": "APP_HOME",
            "value": "/app"
          },
          {
            "name": "APP_ENV",
            "value": "production"
          }
        ],
        "form": "key_value"
      },
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 53,
          "end_column": 37,
          "end_line": 2,
          "start_byte": 21,
          "start_column": 5,
          "start_line": 2
        },
        "text": "APP_HOME=/app APP_ENV=production"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ENV",
      "keyword_span": {
        "end_byte": 20,
        "end_column": 4,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 53,
        "end_column": 37,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "run": null
    },
    {
      "arg": null,
      "args": "PATH /usr/local/bin:$PATH",
      "args_span": {
        "end_byte": 83,
        "end_column": 30,
        "end_line": 3,
        "start_byte": 58,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "env": {
        "assignments": [
          {
            "name": "PATH",
            "value": "/usr/local/bin:$PATH"
          }
        ],
        "form": "legacy_pair"
      },
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 83,
          "end_column": 30,
          "end_line": 3,
          "start_byte": 58,
          "start_column": 5,
          "start_line": 3
        },
        "text": "PATH /usr/local/bin:$PATH"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "ENV",
      "keyword_span": {
        "end_byte": 57,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 54,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 83,
        "end_column": 30,
        "end_line": 3,
        "start_byte": 54,
        "start_column": 1,
        "start_line": 3
      },
      "run": null
    }
  ],
  "syntax": null
}
