crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__expose.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "run": null
    },
    {
      "arg": null,
      "args": "80 443/tcp 53/udp",
      "args_span": {
        "end_byte": 41,
        "end_column": 25,
        "end_line": 2,
        "start_byte": 24,
        "start_column": 8,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": {
        "ports": [
          {
            "port": "80",
            "protocol": null
          },
          {
            "port": "443",
            "protocol": "tcp"
          },
          {
            "port": "53",
            "protocol": "udp"
          }
        ]
      },
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 41,
          "end_column": 25,
          "end_line": 2,
          "start_byte": 24,
          "start_column": 8,
          "start_line": 2
        },
        "text": "80 443/tcp 53/udp"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "EXPOSE",
      "keyword_span": {
        "end_byte": 23,
        "end_column": 7,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 41,
        "end_column": 25,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "run": null
    }
  ],
  "syntax": null
}
